--- a/style.css
+++ b/style.css
@@ -7,24 +7,23 @@ body{
 
 #container{
   display: flex;
-  background-color: black;
+  background-color: #ECC0ED;
   flex: 3;
   flex-direction: column;
   align-self: center;
   align-items: center;
-  color: white;
-  border: 4px solid white;
-  font-family: Arial, Helvetica, sans-serif;
+  border: 4px solid #985F99;
   width: 50%;
   height: 50%;
 }
 
 #header{
   flex:1;
-  border-bottom: 4px solid white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #4c4c4c;
   width: 100%;
   text-align: center;
-  font-size: 24px;
+  font-size: 48px;
   padding: 5px 0;
 }
 
@@ -33,7 +32,9 @@ body{
   flex-direction: column;
   flex-wrap: wrap;
   flex: 16;
-  border: 4px solid white;
+  width: 500px;
+  height: 500px;
+  border: 4px solid #C9B7C9;
   padding: 5px 0;
 }
 
@@ -46,16 +47,35 @@ body{
 
 #buttons{
   flex: 1;
-  border: 4px solid white;
   width: 100%;
+  min-height: 30px;
   padding: 5px 0;
   text-align: center;
+}
 
+.button{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: #323232;
+  height: auto;
+  padding: 8px;
+  background-color: #ECC0ED;
+  border: 3px solid #985F99;
+}
+
+.button:hover{
+  border: 5px solid #985F99;
+  font-weight: bold;
+}
+
+.button:active{
+  background-color: grey;
+  border: 5px solid #985F99;
 }
 
 .pixel{
   flex: 1;
-  width: 5px;
-  height: 5px;
+  width: auto;
+  height: auto;
   background-color: white;
 }
