--- a/style.css
+++ b/style.css
@@ -13,18 +13,20 @@ body{
   align-self: center;
   align-items: center;
   border: 4px solid #985F99;
-  width: 50%;
-  height: 50%;
+  max-width: 50%;
+  min-height: 20%;
 }
 
 #header{
   flex:1;
   font-family: Arial, Helvetica, sans-serif;
   color: #4c4c4c;
-  width: 100%;
-  text-align: center;
-  font-size: 48px;
-  padding: 5px 0;
+  display: flex;
+}
+
+#header img{
+  align-self: center;
+  transform: scale(1.2);
 }
 
 #sketchpad{
@@ -32,10 +34,10 @@ body{
   flex-direction: column;
   flex-wrap: wrap;
   flex: 16;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   border: 4px solid #C9B7C9;
-  padding: 5px 0;
+  padding: 5px 5px;
 }
 
 .pixelRow{
@@ -55,16 +57,16 @@ body{
 
 .button{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   color: #323232;
   height: auto;
   padding: 8px;
   background-color: #ECC0ED;
-  border: 3px solid #985F99;
+  border: 2px solid #985F99;
 }
 
 .button:hover{
-  border: 5px solid #985F99;
+  border: 4px solid #985F99;
   font-weight: bold;
 }
 
